--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-color: aquamarine;
+    margin-top: 2px;
+    font-family: 'Courier New', Courier, monospace;
+
+}
+h1,h2,h3,h4{
+    border: 1px;
+    font-style: italic;
+    padding: 12px;
+}
